  and sets the execution mode to "prepare" upon connection (DB2 z/OS
  can execute "call procname()" calls if the SQL is prepared first).
* Added <SessionVariable> property in the drivers.xml that allows a 
  driver to set certain session variable values upon connection.
* Added --show-password option to "\connect --list" because I keep
  forgetting passwords to systems.
* More care is taken to ensure that database connections are actually
  formally close()'d when jsqsh exits or a session terminates.

Release 1.3
* The 'dist-rpm' target and has been updated so that it works on 
  more recent RPM distributions (specifically I am running FC10).
* Compilation requires JDK 1.6 now due to support for new datatypes. It
  should run OK in JDK 1.5 provided you don't reference one of those
  datatypes.
* A driver definition (the drivers.xml) file may now contain a new
  <Property> tag to define properties that are to be passed into the
  driver at connect time.
* The DB2 driver now sets the retrieveMessagesFromServerOnGetMessage 
  property. This results in actual usable error messages.
* The \call statement is now capable of displaying Oracle result sets
  produced from Oracle refcursors. This is done with the special ":r"
  argument placeholder.  See "\help call" for details.
* The "perfect" display mode will now attempt to compact the display columns
  sufficiently tight to fit within the screen (only if jsqsh JNI is 
  available).
* Added mssql2k5 driver definition for the SQL Server 2005 JDBC
  driver.
* History buffer numbers are now numbered oldest to newest, so that 
  the buffer number for a given buffer will not change until the 
  session ends or the buffer is removed from history.
* Added --repeat to \go, so that a query can be executed multiple times.
  During this execution the variable ${iteration} can be referred to
  within the query to determine which iteration of the repeat cycle
  the query is on (starting from 0).